add content for header and nav

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     </head>
 
     <body>
-
+        <div class="container">
+            <header class="logo">
+                <h1>Holy Grail Grid Demo</h1>
+            </header>
+            <nav class="main-menu">
+                <ul>
+                    <li class="main-menu__item"><a href="#">Our clients</a></li>
+                    <li class="main-menu__item"><a href="#">Products</a></li>
+                    <li class="main-menu__item"><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </body>
 
 </html>
