--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <header class="logo">
                 <h1>Holy Grail Grid Demo</h1>
             </header>
+
             <nav class="main-menu">
                 <ul>
                     <li class="main-menu__item"><a href="#">Our clients</a></li>
@@ -21,6 +22,43 @@
                     <li class="main-menu__item"><a href="#">Contact</a></li>
                 </ul>
             </nav>
+
+            <main class="content-area">
+                <h2>Welcome!</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas odit, culpa hic quos, ratione
+                    recusandae vel earum consectetur ducimus odio libero suscipit nesciunt dolorem voluptate impedit
+                    vero doloribus quasi officiis.</p>
+            </main>
+
+            <aside class="sidebar">
+                <h3>Additional Stuff</h3>
+                <ul>
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>Item 3</li>
+                    <li>Item 4</li>
+                    <li>Item 5</li>
+                </ul>
+            </aside>
+            <section class="sponsor-wrapper">
+                <h2>Our sponsors</h2>
+                <section class="sponsors">
+                    <figure class="sponsor"><img src="https://via.placeholder.com/150x150" alt="Placeholder image">
+                    </figure>
+                    <figure class="sponsor"><img src="https://via.placeholder.com/200x150" alt="Placeholder image">
+                    </figure>
+                    <figure class="sponsor"><img src="https://via.placeholder.com/100x200" alt="Placeholder image">
+                    </figure>
+                    <figure class="sponsor"><img src="https://via.placeholder.com/100x100" alt="Placeholder image">
+                    </figure>
+                    <figure class="sponsor"><img src="https://via.placeholder.com/200x200" alt="Placeholder image">
+                    </figure>
+                </section>
+            </section>
+            <footer class="footer">
+                <p>&copy; 2022 Holy Grail Grid Demo. Coded by <a href="https://github.com/ritabradley">Rita Bradley</a>
+                </p>
+            </footer>
         </div>
     </body>
 
