--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container">
             <header class="logo">
-                <h1>Holy Grail Grid Demo</h1>
+                <h1><a href="#">Holy Grail Grid Demo</a></h1>
             </header>
 
             <nav class="main-menu">
