add more content to content area

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container">
             <header class="logo">
-                <h1><a href="#">Holy Grail Grid Demo</a></h1>
+                <h1><a href="#">Holy Grail Grid</a></h1>
             </header>
 
             <nav class="main-menu">
@@ -27,7 +27,14 @@
                 <h2>Welcome!</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas odit, culpa hic quos, ratione
                     recusandae vel earum consectetur ducimus odio libero suscipit nesciunt dolorem voluptate impedit
-                    vero doloribus quasi officiis.</p>
+                    vero doloribus quasi officiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+                    assumenda ratione fuga esse, tenetur reiciendis quas, facilis dolore dolorum dignissimos deserunt
+                    natus repudiandae nulla quidem? Veritatis delectus nam commodi dolores.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque amet quibusdam laboriosam, aut a
+                    animi labore, totam quos voluptas est quisquam sapiente blanditiis et incidunt vitae. Nostrum dicta
+                    necessitatibus totam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. A voluptatibus
+                    corrupti repellendus iure, totam ducimus quaerat nisi amet dolorum fugiat, maxime porro. Impedit
+                    ipsam magni sunt corrupti blanditiis. Deserunt, pariatur.</p>
             </main>
 
             <aside class="sidebar">
